--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -38,12 +38,14 @@
     background-color: rgb(0, 50, 75);
   }
   .labels {
+    grid-area: label;
     margin-bottom: 15px;
 
     //border:solid red;
 
-    font-size: 2rem;
+    font-size: 250%;
   }
+
 
   .fa-pause,
   .fa-play {
@@ -55,9 +57,11 @@
     //margin-top: 10px;
     //margin-bottom: 10px;
 
-    width: 90px;
-    height: 90px;
-    min-width: 20%;
+    //width: 100%;
+    flex-basis: 30%;
+    height: max-content;
+    aspect-ratio: 1 / 1;
+    //min-width: 20%;
   }
 
   .start-refresh-buttons {
@@ -69,16 +73,21 @@
   }
 
   .time-modifiers {
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    /*grid-template-columns: 30% 1fr 30%;
     grid-template-areas:
-      "label label label"
-      "increment value decrement";
+      ". label ."
+      "increment value decrement";*/
 
     margin: auto;
 
-    //border: solid yellow;
+    // border: solid salmon;
 
-    width: 300px;
+    width: 100%;
+    min-width: 100%;
+
+    padding: none;
   }
 
   .increment-buttons {
@@ -88,11 +97,22 @@
   .length-values {
     grid-area: value;
 
-    font-size: 50px;
+    // border: dotted red;
+
+    flex-basis:10%;
+
+    padding: 0;
+
+    font-size: 4vw;
   }
 
   .decrement-buttons {
     grid-area: decrement;
+  }
+
+  .btn-row{
+    display: flex;
+
   }
 
   #timed-buttons {
@@ -149,11 +169,13 @@
   #session {
     grid-area: session;
 
-    border: solid salmon;
+    /*border: solid salmon;
 
+    width: 100%;
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100%;*/
   }
+
 
   #timer-label {
     margin-left: -45%;
@@ -176,10 +198,11 @@
   #break {
     grid-area: break;
 
-    border: solid salmon;
+    /*border: solid salmon;
 
+    width: 100%;
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100%;*/
   }
 
   button {
