--- a/Main_Folder/MY_PROJECTS/timer/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/timer/src/App.scss
@@ -25,9 +25,10 @@
     display: grid;
     grid-template-areas:
       ". circle ."
-      ". circle ."
+      //". circle ."
       "session circle break";
     grid-template-columns: 20% 1fr 20%;
+    //grid-template-rows: auto ;
 
     width: 100%;
     height: 100%;
@@ -44,7 +45,7 @@
 
     //border:solid red;
 
-    font-size: 250%;
+    font-size: 150%;
   }
 
   .fa-pause,
@@ -56,11 +57,11 @@
   }
 
   .settings-buttons {
-    //margin-top: 10px;
-    //margin-bottom: 10px;
+   margin:0;
+   align-self: center;
 
     //width: 100%;
-    flex-basis: 30%;
+    flex-basis: 20%;
     height: max-content;
     aspect-ratio: 1 / 1;
 
@@ -105,14 +106,17 @@
 
   .length-values {
     grid-area: value;
+    align-self: center;
+
+
 
     // border: dotted red;
 
-    flex-basis: 10%;
+    flex-basis: 15%;
 
     padding: 0;
 
-    font-size: 4vw;
+    font-size: 2vw;
   }
 
   .decrement-buttons {
@@ -121,6 +125,12 @@
 
   .btn-row {
     display: flex;
+
+    justify-content: center;
+
+    margin-bottom: 3.2%;
+
+    //border: solid black;
   }
 
   #timed-buttons {
@@ -169,7 +179,7 @@
 
     padding: none;
 
-    font-size: 3vw;
+    font-size: 2vw;
   }
 
   #session {
@@ -184,7 +194,7 @@
 
   #timer-label {
     align-self: flex-start;
-    margin-left: 17%;
+    margin-left: 14%;
 
     margin-bottom: -2%;
 
@@ -199,7 +209,7 @@
 
     padding: 0;
 
-    font-size: 15vw;
+    font-size: 13vw;
     line-height: 85%;
   }
 
@@ -246,8 +256,12 @@
       width: 90vw;
       aspect-ratio: 1 / 1;
 
+      font-size: 3.5vw;
+
       #timer-label {
-        font-size: 3vw;
+        margin-left: 7.5%;
+
+        font-size: 4vw;
 
       }
       #time-left{
