--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -15,6 +15,7 @@
 
 :root {
 	--header-height: 107px;
+  --borders-color:1px solid rgb(239, 243, 244);
 }
 
 section,
@@ -72,7 +73,7 @@ li {
 		// /* margin: 0; */ commented out to prevent fixed position being pushed to top
 		padding: 0;
 		//align-items: end;
-		border-top: 1px solid rgb(239, 243, 244);
+		border-top:var(--borders-color);
 		height: 53.5px;
 		width: 100%;
 		box-sizing: border-box;
@@ -114,34 +115,32 @@ li {
 					//padding: 1rem 1.5rem 1rem 1.5rem;
 					//border:solid blue;
 					a {
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					text-decoration: none;
-					//border:solid black;
-					/* color: initial; */
-					//margin: 0 0 0 2px;
-					padding: 0;
-					// width: 100%;
-					// height: 100%;
-					//border: 1px solid blue;
-					svg {
-						//background-color: #1d8ad3;
-						border-radius: 50%;
-						//border:solid red;
-						padding:8px;
-						//display: inline-block;
-						/* padding:0;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						text-decoration: none;
+						//border:solid black;
+						/* color: initial; */
+						//margin: 0 0 0 2px;
+						padding: 0;
+						// width: 100%;
+						// height: 100%;
+						//border: 1px solid blue;
+						svg {
+							//background-color: #1d8ad3;
+							border-radius: 50%;
+							//border:solid red;
+							padding: 8px;
+							//display: inline-block;
+							/* padding:0;
 							margin:0; */
-						//border:solid red;
-						// align-self: center;
+							//border:solid red;
+							// align-self: center;
+						}
+						svg:active {
+							background-color: lightgray;
+						}
 					}
-					svg:active{
-						background-color: lightgray;
-					}
-				}
-
-
 				}
 				/* li:hover {
 					background-color: rgba(220, 220, 220, 0.6);
@@ -197,15 +196,16 @@ li {
 		}
 	}
 	#middle-container {
-		//flex: 0 0 100%;
-		// display: flex;
-		//direction: column;
+		flex: 1 1 auto;
+		 display: flex;
+		direction: column;
 		overflow-y: scroll;
 		scroll-behavior: smooth;
 		//order: 1;
-		z-index: 1;
+		//z-index: 1;
 		#header {
 			position: fixed;
+      //border:solid green;
 			display: flex;
 			flex-direction: column;
 			margin: 0;
@@ -217,12 +217,14 @@ li {
 			transition: margin-top 0.16s;
 			transition-timing-function: ease;
 			transition-delay: 0ms;
+      //border:1px solid green;
 
 			#header-top {
 				height: 53px;
 				display: flex;
 				justify-content: center;
 				align-items: center;
+        width: 100%;
 				//font-size: 1.2rem;
 				//font-weight: bold;
 				//flex-basis: 0 0 50%;
@@ -256,6 +258,7 @@ li {
 				height: 53px;
 				display: flex;
 				align-items: center;
+        width:100%;
 				//flex-direction: column;
 				//flex-basis: 0 0 50%;
 				//justify-content: end;
@@ -266,7 +269,7 @@ li {
 				line-height: 20px;
 				margin: 0;
 				padding: 0;
-				border-bottom: 1px solid rgb(239, 243, 244);
+				border-bottom:var(--borders-color);
 				//font-weight:500;
 
 				ul {
@@ -495,18 +498,83 @@ li {
 }
 
 @media only screen and (500px<=width<=688px) {
-#App{
-	flex-direction:row;
-}
-#left-container{
-	position:relative;
-	flex:1 1 auto;
-	margin:0;
-	height:100vh;
-	width:10%;
-	z-index:1;
-}
-#middle-container{
-	width:100%
-}
+	#App {
+		flex-direction: row;
+overflow-x: scroll;
+		#left-container {
+			position: fixed;
+			flex-direction: column;
+			flex: 1 0 auto;
+			height: 100vh;
+			// z-index: 2;
+			width: 68px;
+			border-right:var(--borders-color);
+			margin: 0;
+			padding: 0;
+      box-sizing: border-box;
+			nav {
+				flex-direction: column;
+				width: 100%;
+				height: 60%;
+				//border: solid blue;
+				margin: 0;
+				padding: 0;
+				ul {
+					flex-direction: column;
+					//border: solid yellow;
+					margin: 0;
+					padding: 0;
+				}
+			}
+		}
+		#middle-container {
+			 flex-basis: 1 1 auto;
+			 width: 100%;
+			 height: 100vh;
+       position: relative;
+			margin-left: 68px;
+
+      //border:solid red;
+      #header{
+        //position: relative;
+        width:calc(100vw - 68px);
+        margin:0;
+        padding:0;
+        //overflow-x: scroll;
+        //border:solid brown;
+         //margin-right:68px;
+      }
+		}
+		// @media (width>600px) {
+		// 	#left-container {
+		// 		//position: relative;
+		// 		flex-direction: column;
+		// 		//border: 1px solid blue;
+		// 		flex: 1 0 auto;
+		// 		margin: 0;
+		// 		height: 100vh;
+		// 		//width: 15%;
+		// 		z-index: 2;
+
+		// 		nav {
+		// 			flex-direction: column;
+		// 			//width: 88px;
+		// 			//border: solid green;
+		// 			ul {
+		// 				flex-direction: column;
+		// 				width: 100%;
+		// 				li {
+		// 					width: 100%;
+		// 					border: solid pink;
+		// 				}
+		// 			}
+		// 		}
+		// 	}
+		// 	// #middle-container {
+		// 	// 	flex-basis: 1 1 auto;
+		// 	// 	width: 100%;
+		// 	// 	height: 100vh;
+		// 	// }
+		// }
+	}
 }
