--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -15,7 +15,7 @@
 
 :root {
 	--header-height: 107px;
-  --borders-color:1px solid rgb(239, 243, 244);
+	--borders-color: 1px solid rgb(239, 243, 244);
 }
 
 section,
@@ -36,6 +36,13 @@ li {
 	padding: 0;
 	//border: 0.1rem solid green;
 }
+.nav-icons{
+  width:26.25px;
+  height: 26.25px;
+}
+.hidden500{
+  display: none !important;
+}
 
 /* .icon-fill {
 	fill: black;
@@ -53,6 +60,7 @@ li {
 	overflow-x: hidden;
 	//overflow-y: hidden;
 	background-color: white;
+	font-family: chirp;
 	//align-items: center;
 	//font-size: calc(10px + 2vmin);
 	//color: black;
@@ -73,7 +81,7 @@ li {
 		// /* margin: 0; */ commented out to prevent fixed position being pushed to top
 		padding: 0;
 		//align-items: end;
-		border-top:var(--borders-color);
+		border-top: var(--borders-color);
 		height: 53.5px;
 		width: 100%;
 		box-sizing: border-box;
@@ -81,7 +89,23 @@ li {
 		background-color: white;
 		// font-family: "Arimo", sans-serif;
 		// font-size: 1.3rem;
-		nav {
+
+	nav {
+		.twitter-logo-box {
+			height: 100%;
+      width: 100%;
+			display: none;
+			align-items: center;
+			margin: 0;
+			padding: 0;
+			.twitter-logo {
+				height: 24.4px;
+				padding: 0;
+				margin: 0;
+				flex: 1 1 auto;
+				fill: rgb(29, 155, 240);
+			}
+    }
 			width: 100%;
 			height: 100%;
 			margin: 0;
@@ -197,7 +221,7 @@ li {
 	}
 	#middle-container {
 		flex: 1 1 auto;
-		 display: flex;
+		display: flex;
 		direction: column;
 		overflow-y: scroll;
 		scroll-behavior: smooth;
@@ -205,7 +229,7 @@ li {
 		//z-index: 1;
 		#header {
 			position: fixed;
-      //border:solid green;
+			//border:solid green;
 			display: flex;
 			flex-direction: column;
 			margin: 0;
@@ -217,19 +241,22 @@ li {
 			transition: margin-top 0.16s;
 			transition-timing-function: ease;
 			transition-delay: 0ms;
-      //border:1px solid green;
+			//border:1px solid green;
 
 			#header-top {
 				height: 53px;
 				display: flex;
 				justify-content: center;
 				align-items: center;
-        width: 100%;
+				width: 100%;
 				//font-size: 1.2rem;
 				//font-weight: bold;
 				//flex-basis: 0 0 50%;
 				margin: 0;
 				padding: 0;
+				span {
+					display: none;
+				}
 				#profile-picture {
 					margin-left: 16px;
 					margin-top: 10px;
@@ -239,13 +266,13 @@ li {
 					padding: 0;
 					//border: 0.1rem solid red;
 				}
-				#twitter-logo-box {
+				.twitter-logo-box {
 					height: 100%;
 					display: flex;
 					align-items: center;
 					margin: 0;
 					padding: 0;
-					#twitter-logo {
+					.twitter-logo {
 						height: 24.4px;
 						padding: 0;
 						margin: 0;
@@ -258,18 +285,18 @@ li {
 				height: 53px;
 				display: flex;
 				align-items: center;
-        width:100%;
+				width: 100%;
 				//flex-direction: column;
 				//flex-basis: 0 0 50%;
 				//justify-content: end;
 				//border-bottom: 1px;
-				font-family: chirp;
+
 				//font-weight: bold;
 				font-size: 15px;
 				line-height: 20px;
 				margin: 0;
 				padding: 0;
-				border-bottom:var(--borders-color);
+				border-bottom: var(--borders-color);
 				//font-weight:500;
 
 				ul {
@@ -500,7 +527,7 @@ li {
 @media only screen and (500px<=width<=688px) {
 	#App {
 		flex-direction: row;
-overflow-x: scroll;
+		overflow-x: scroll;
 		#left-container {
 			position: fixed;
 			flex-direction: column;
@@ -508,15 +535,17 @@ overflow-x: scroll;
 			height: 100vh;
 			// z-index: 2;
 			width: 68px;
-			border-right:var(--borders-color);
+			border-right: var(--borders-color);
 			margin: 0;
 			padding: 0;
-      box-sizing: border-box;
+			box-sizing: border-box;
+
 			nav {
-				flex-direction: column;
+        flex-direction: column;
+        //flex-basis: 0 0 auto;
 				width: 100%;
-				height: 60%;
-				//border: solid blue;
+				height: 585px;
+				border: 0.1px solid blue;
 				margin: 0;
 				padding: 0;
 				ul {
@@ -524,26 +553,65 @@ overflow-x: scroll;
 					//border: solid yellow;
 					margin: 0;
 					padding: 0;
+
+          .hidden-to-500{
+            //display: block;
+          }
 				}
+				.twitter-logo-box {
+					height: auto;
+					display: flex;
+					border: solid purple;
+					align-items: center;
+					margin: 0;
+					padding: 0;
+					.twitter-logo {
+						height: 24.4px;
+						padding: 0;
+						margin: 0;
+						flex: 1 1 auto;
+						fill: rgb(29, 155, 240);
+					}
+				}
+
 			}
+      #profile-pill-container{
+        display: none;
+      }
 		}
 		#middle-container {
-			 flex-basis: 1 1 auto;
-			 width: 100%;
-			 height: 100vh;
-       position: relative;
+			flex-basis: 1 1 auto;
+			width: 100%;
+			height: 100vh;
+			position: relative;
 			margin-left: 68px;
 
-      //border:solid red;
-      #header{
-        //position: relative;
-        width:calc(100vw - 68px);
-        margin:0;
-        padding:0;
-        //overflow-x: scroll;
-        //border:solid brown;
-         //margin-right:68px;
-      }
+			//border:solid red;
+			#header {
+				//position: relative;
+				width: calc(100vw - 68px);
+				margin: 0;
+				padding: 0;
+				//overflow-x: scroll;
+				//border:solid brown;
+				//margin-right:68px;
+				#header-top {
+					padding-left: 18px;
+					padding-top: 15px;
+					#profile-picture {
+						display: none;
+					}
+					span {
+						display: inline-block;
+						font-size: 20px;
+						font-weight: bold;
+						//border: solid;
+					}
+					.twitter-logo {
+						display: none;
+					}
+				}
+			}
 		}
 		// @media (width>600px) {
 		// 	#left-container {
