--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1,32 +1,31 @@
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Regular.80fda27a.woff2") format("woff2");
-	font-weight: 400;//regular
+	font-weight: 400; //regular
 }
 
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Medium.f8e2739a.woff2") format("woff");
-	font-weight: 500//medium;
+	font-weight: 500 //medium;;
 }
 
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Bold.ebb56aba.woff2") format("woff2");
-	font-weight: 700;//bold
+	font-weight: 700; //bold
 }
 
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Heavy.f44ae4ea.woff2") format("woff2");
-	font-weight: 900//heavy;
+	font-weight: 900 //heavy;;
 }
 @font-face {
 	font-family: "chirp";
 	src: url("./assets/fonts/Chirp-Light.3a18e64a.woff2") format("woff2");
-	font-weight: 300;//light
+	font-weight: 300; //light
 }
-
 
 :root {
 	--header-height: 107px;
@@ -787,7 +786,7 @@ button:hover {
 	&_twitter-logo-box {
 		height: 100%;
 		//min-width: 24px;
-		flex:1 0 auto;
+		flex: 1 0 auto;
 		display: flex;
 		align-items: center;
 		margin: 0;
@@ -829,12 +828,12 @@ button:hover {
 		align-items: stretch;
 		text-decoration: none;
 		list-style: none;
-		font-weight:500;
+		font-weight: 500;
 		height: 100%;
 		width: 100%;
 		margin: 0;
 		padding: 0 0 0 0;
-		font-size:15px;
+		font-size: 15px;
 		//flex:1 1 0;
 		box-sizing: border-box;
 		overflow-x: auto; //this allows for perfect alignment of the texts in this case
@@ -869,17 +868,17 @@ button:hover {
 		color: rgb(83, 100, 113);
 		box-sizing: border-box;
 		font-stretch: 100%;
-		font-weight:400;
+		font-weight: 400;
 		line-height: 20px;
 		text-align: start;
-		flex:1 0 auto;
+		flex: 1 0 auto;
 		div {
 			font-family: chirp;
 			font-weight: 500;
 			line-height: 20px;
 			display: block;
 			box-sizing: border-box;
-			font-size:15px;
+			font-size: 15px;
 			font-weight: 500;
 			list-style-position: outside;
 			overflow-wrap: break-word;
@@ -901,13 +900,13 @@ button:hover {
 			font-family: chirp;
 			font-weight: 700;
 			font-feature-settings: normal;
-			font-optical-sizing:auto;
-			font-kerning:auto;
+			font-optical-sizing: auto;
+			font-kerning: auto;
 			font-size: 15px;
 			font-stretch: 100%;
 			font-weight: 700;
 			letter-spacing: normal;
-			word-wrap:wrap;
+			word-wrap: wrap;
 			color: black;
 			justify-self: center;
 			@media screen and (width>=500px) {
@@ -977,8 +976,8 @@ button:hover {
 
 	&_tweet-input {
 		appearance: none;
-		background-color: rgba(0,0,0,0);
-		color:rgb(15,20,25);
+		background-color: rgba(0, 0, 0, 0);
+		color: rgb(15, 20, 25);
 		width: 100%;
 		height: 124px;
 		display: block;
@@ -1139,7 +1138,7 @@ button:hover {
 	display: none;
 	@media screen and (width>=988px) {
 		position: sticky;
-		top:0;
+		top: 0;
 		display: flex;
 		width: 290px;
 		height: 44px;
@@ -1212,7 +1211,6 @@ button:hover {
 		margin-bottom: 16px;
 		border-radius: 17px;
 		box-sizing: border-box;
-
 	}
 
 	@media screen and (width>=1078px) {
@@ -1225,17 +1223,17 @@ button:hover {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height:100%;
-	padding:12px 16px;
+	height: 100%;
+	padding: 12px 16px;
+	box-sizing: border-box;
 
-
-	&_header{
-		font-family:chirp;
+	&_header {
+		font-family: chirp;
 		font-weight: 900;
 		font-size: 20px;
 	}
 
-	&_text{
+	&_text {
 		font-size: 15px;
 		font-weight: 600;
 	}
@@ -1254,6 +1252,7 @@ button:hover {
 		margin-bottom: 16px;
 		border-radius: 17px;
 		box-sizing: border-box;
+		border: solid 1px rgb(247, 249, 249);
 	}
 
 	@media screen and (width>=1078px) {
@@ -1268,14 +1267,14 @@ button:hover {
 		height: 48px;
 		font-size: 20px;
 		font-family: chirp;
-			font-weight: bold;
+		font-weight: bold;
 		width: 100%;
 		width: 288px;
-		padding: 12px 17px;
+		padding: 12px 16px;
 		box-sizing: border-box;
 		span {
 			border: none;
-			min-width:178.281px;
+			min-width: 178.281px;
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
@@ -1292,11 +1291,31 @@ button:hover {
 		height: 82px;
 		padding: 12px 16px;
 		box-sizing: border-box;
-
+	}
+	&_categories {
+		height: 16px;
+		font-size: 13px;
+		color: rgb(83, 100, 113);
 	}
 
-	.thesec{
-		color:black;
+	&_topics {
+		height: 20px;
+		margin-top: 2px;
+		font-family: chirp;
+		font-weight: 700;
+		font-size: 15px;
+		//color: rgb(83, 100, 113);
+	}
+
+	&_trending-scopes {
+		height: 16px;
+		margin-top: 4px;
+		font-size: 13px;
+		color: rgb(83, 100, 113);
+	}
+
+	.thesec {
+		color: black;
 	}
 	&_cards-footer {
 		width: 288px;
@@ -1326,7 +1345,7 @@ button:hover {
 		height: 48px;
 		font-size: 20px;
 		font-family: chirp;
-			font-weight: bold;
+		font-weight: bold;
 		width: 100%;
 		width: 288px;
 		padding: 12px 16px;
