--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -343,9 +343,9 @@ li {
 		@media only screen and (width>=500px) {
 			/* margin-top: 0; */
 			.nav_text:focus {
-			font-family: chirp;
-			font-weight: bold;
-		}
+				font-family: chirp;
+				font-weight: bold;
+			}
 		}
 	}
 
@@ -621,7 +621,7 @@ button:hover {
 			height: 65.06px;
 		}
 	}
-	img {
+	&_image {
 		display: flex;
 		width: 40px;
 		aspect-ratio: 1/1;
@@ -1202,8 +1202,8 @@ button:hover {
 		font-size: 15px;
 		letter-spacing: normal;
 		text-align: left;
-		font-stretch:100%;
-		font-weight:400;
+		font-stretch: 100%;
+		font-weight: 400;
 	}
 }
 
@@ -1240,26 +1240,25 @@ button:hover {
 		font-family: chirp;
 		font-weight: 900;
 		font-size: 20px;
-	};
+	}
 
 	&_text {
 		font-size: 15px;
 		font-weight: 600;
 		height: 20px;
-	};
+	}
 
-	&_button-container{
+	&_button-container {
 		//@extend .tweet-button-container
-		border:1px solid rgb(247, 249, 249);
+		border: 1px solid rgb(247, 249, 249);
 
-		height:36px;
+		height: 36px;
 		box-sizing: border-box;
-		display:flex;
-		align-items: center
+		display: flex;
+		align-items: center;
+	}
 
-	};
-
-	&_button-wrapper{
+	&_button-wrapper {
 		@extend .tweet-button-wrapper;
 		background-color: black;
 		height: 100%;
@@ -1268,11 +1267,10 @@ button:hover {
 		box-sizing: border-box;
 	}
 
-	&_button-text{
+	&_button-text {
 		@extend .tweet-button-wrapper_text;
 		font-size: 15px;
 		height: 20px;
-
 	}
 }
 
@@ -1397,10 +1395,42 @@ button:hover {
 
 	&_cards {
 		display: flex;
-		width: 288;
-		height: 72px;
+		width: 348px;
+		min-height: 65.06px;
+		max-height: 65.06px;
 		padding: 12px 16px;
 		box-sizing: border-box;
+
+		&_wrapper {
+			@extend .profile-wrapper;
+			padding:0;
+			margin:0;
+			width: 100%;
+			height: 100%;
+		}
+		&_container {
+			@extend .profile-wrapper_container;
+			padding:0;
+			height: 100%;
+		}
+
+		&_user-info {
+			@extend .profile-wrapper_user-info;
+		}
+
+		&_image{
+			@extend .profile-wrapper_image
+		}
+
+		span{
+			height: 40px;
+		}
+	}
+
+	&_button-container {
+		@extend .tweet-button-container;
+		min-width: 78px;
+		max-height: 40px;
 	}
 
 	&_cards-footer {
