--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1380,7 +1380,7 @@ button:hover {
 		height: 48px;
 		font-size: 20px;
 		font-family: chirp;
-		font-weight: bold;
+		font-weight: 800;
 		width: 100%;
 		width: 288px;
 		padding: 12px 16px;
@@ -1396,21 +1396,21 @@ button:hover {
 	&_cards {
 		display: flex;
 		width: 348px;
-		min-height: 65.06px;
-		max-height: 65.06px;
+		height: 65.063px;
 		padding: 12px 16px;
 		box-sizing: border-box;
 
 		&_wrapper {
-			@extend .profile-wrapper;
-			padding:0;
-			margin:0;
+			//@extend .profile-wrapper;
+			padding: 0;
+			margin: 0;
 			width: 100%;
-			height: 100%;
+			height: 41.0625px;
+			min-height: 41.0625px;
 		}
 		&_container {
 			@extend .profile-wrapper_container;
-			padding:0;
+			padding: 0;
 			height: 100%;
 		}
 
@@ -1418,19 +1418,37 @@ button:hover {
 			@extend .profile-wrapper_user-info;
 		}
 
-		&_image{
-			@extend .profile-wrapper_image
+		&_image {
+			@extend .profile-wrapper_image;
 		}
 
-		span{
+		span {
 			height: 40px;
 		}
 	}
 
-	&_button-container {
+	&_button_container {
 		@extend .tweet-button-container;
-		min-width: 78px;
+		width: 78px;
 		max-height: 40px;
+		padding: 0;
+	}
+
+	&_button_wrapper {
+		@extend .tweet-button-wrapper;
+		height: 32px;
+		width: 78px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	&_button_text {
+		font-size: 14px;
+		font-weight: 700;
+		color: white;
+		padding: 0 !important;
+		margin: 0;
 	}
 
 	&_cards-footer {
