--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -102,6 +102,18 @@ li {
 	flex-direction: column;
 }
 
+.justify-stretch{
+	justify-content: stretch;
+}
+
+
+.flex-b1{
+	flex-basis: 1;
+}
+.flex-b3{
+	flex-basis: 3;
+}
+
 .App {
 	display: flex;
 	flex-direction: column;
@@ -1244,8 +1256,10 @@ button:hover {
 
 	&_text {
 		font-size: 15px;
-		font-weight: 600;
+		font-weight: 700;
 		height: 20px;
+		padding: 1px 0px;
+		box-sizing: border-box;
 	}
 
 	&_button-container {
@@ -1261,16 +1275,18 @@ button:hover {
 	&_button-wrapper {
 		@extend .tweet-button-wrapper;
 		background-color: black;
-		height: 100%;
-		width: 120.16px;
-		padding: 0 16px;
+		height: 38px;
+		width: 120.148px;
+		padding: 0px 16px;
 		box-sizing: border-box;
+		border: 1px solid rgb(247, 249, 249);
 	}
 
 	&_button-text {
 		@extend .tweet-button-wrapper_text;
 		font-size: 15px;
 		height: 20px;
+		font-weight: 700;
 	}
 }
 
@@ -1326,6 +1342,25 @@ button:hover {
 		height: 82px;
 		padding: 12px 16px;
 		box-sizing: border-box;
+
+	}
+	&_cards-with-image{
+		@extend .trending-wrapper_cards;
+		height: 92px;
+
+		.wrapper1{
+			@extend .wrappers--flex;
+			min-width:236px;
+			margin-right: 12px;
+			box-sizing: border-box;
+			flex-direction: column;
+		}
+	}
+
+	&_images{
+		width: 68px;
+		height: 68px;
+		border-radius: 12px;
 	}
 	&_categories {
 		height: 16px;
